# ModelScope-dataset-mcp

./: DESIGN.md  README.md  README_DEMO.md  REDIS_INSTALL_GUIDE.md  check_db.py  config.json  config.yaml  demo.bat  demo_simple.py  install_deps.bat  menu.bat  pyproject.toml  quick_start.bat  requirements-dev.txt  requirements.txt  start_server.bat  stop_server.bat  test_all.bat  test_dataset_query.py  test_db_search.py  test_demo.py  test_direct_query.py  test_handlers_simple.py  test_mcp_client.py  test_mcp_server.py  test_mcp_simple.py  test_query_parsing.py  test_server_simple.py  test_simple.py  test_specific_query.py  test_summary.md
data/: modelscope_mcp.db
src/modelscope_mcp/: __init__.py  server.py
src/modelscope_mcp/cache/: __init__.py  cache_manager.py  cache_strategies.py  decorators.py
src/modelscope_mcp/config/: __init__.py  config_manager.py  environment.py  settings.py
src/modelscope_mcp/core/: __init__.py  config.py  logger.py
src/modelscope_mcp/integrations/: __init__.py  dataset_manager.py  datasets_client.py  modelscope_client.py
src/modelscope_mcp/models/: __init__.py  base.py  cache.py  dataset.py  init_db.py  query.py
src/modelscope_mcp/nlp/: __init__.py  entity_extractor.py  intent_classifier.py  query_parser.py
src/modelscope_mcp/services/: __init__.py  cache.py  database.py
src/modelscope_mcp/tools/: __init__.py  filter_samples.py  get_dataset_info.py  list_datasets.py  query_dataset.py
src/modelscope_mcp/utils/: logging.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_database.py  test_dataset_manager.py  test_nlp.py  test_tools.py
